--- a/test/fixtures/addresses.yml
+++ b/test/fixtures/addresses.yml
@@ -9,6 +9,15 @@
 #  zipcode        :integer
 #  created_at     :datetime         not null
 #  updated_at     :datetime         not null
+#  user_id        :bigint
+#
+# Indexes
+#
+#  index_addresses_on_user_id  (user_id)
+#
+# Foreign Keys
+#
+#  fk_rails_...  (user_id => users.id)
 #
 
 one:
