--- a/test/fixtures/payments.yml
+++ b/test/fixtures/payments.yml
@@ -8,6 +8,15 @@
 #  expiry_date :date
 #  created_at  :datetime         not null
 #  updated_at  :datetime         not null
+#  user_id     :bigint
+#
+# Indexes
+#
+#  index_payments_on_user_id  (user_id)
+#
+# Foreign Keys
+#
+#  fk_rails_...  (user_id => users.id)
 #
 
 one:
